<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/primary_blue"
    app:cardCornerRadius="14dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_done" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/transaksi_berhasil"
            android:text="@string/transaksi_berhasil"
            android:textColor="@color/neutral_01"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_date"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_nominal"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biaya_admin"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_biaya_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_biaya_admin"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor_transaksi"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nomor_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_nomor_transaksi"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_FinSera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/account_number_value"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_tujuan"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_bank_tujuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_bank"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_penerima"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nama_penerima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_nama_penerima"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rekening_tujuan"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_rekening_tujuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_rekening_tujuan"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catatan"
                android:textColor="@color/neutral_01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/example_catatan"
                android:textColor="@color/neutral_01"
                android:textFontWeight="700"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/neutral_01"
                android:contentDescription="@string/download"
                android:text="@string/download"
                android:textColor="@color/neutral_09"
                android:textSize="@dimen/button_2"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:backgroundTint="@color/neutral_01"
                android:contentDescription="@string/share"
                android:text="@string/share"
                android:textColor="@color/neutral_09"
                android:textSize="@dimen/button_2"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_share"
                app:iconGravity="textStart"
                app:iconTint="@color/neutral_09" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/neutral_01"
            android:contentDescription="@string/kembali_ke_menu"
            android:text="@string/kembali_ke_menu"
            android:textColor="@color/neutral_09"
            android:textSize="20sp"
            app:cornerRadius="8dp" />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>