<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivPromoIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_notification_bell"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvNotifType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text2"
                android:textStyle="bold"
                android:textColor="@color/neutral_04"
                android:text="@string/promo"/>

            <TextView
                android:id="@+id/tvPromoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue"
                android:textSize="14sp"
                android:text="@string/time_date_promo"/>

            <TextView
                android:id="@+id/tvPromoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="@string/monolog_promo"/>

            <TextView
                android:id="@+id/tvPromoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/caption_promo"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>